--- a/ext/splash2/apps/ocean_cp/src/makefile
+++ b/ext/splash2/apps/ocean_cp/src/makefile
@@ -1,10 +1,9 @@
 TARGET = ocean_cp
 OBJS = main.o jacobcalc.o jacobcalc2.o laplacalc.o \
-	slave1.o slave2.o multi.o linkup.o subblock.o 
-CFLAGS = -O2 -w  
-LDFLAGS = -lpthread -lm 
+	slave1.o slave2.o multi.o linkup.o subblock.o
+LDFLAGS += -lpthread -lm
 MACROS = ../../../null_macros/c.m4.null.pthread
-M4 = m4 -s -Ulen -Uindex
+M4FLAGS = -s -Ulen -Uindex
 
 x = *
 
@@ -16,7 +15,7 @@ ifdef version
 endif
 
 $(TARGET): $(OBJS)
-	gcc $(OBJS) -o $(TARGET) $(LDFLAGS)
+	$(CC) $(OBJS) -o $(TARGET) $(LDFLAGS)
 
 install:
 	mkdir -p $(PREFIX)/bin
@@ -29,18 +28,18 @@ clean:
 .SUFFIXES:
 .SUFFIXES:	.o .c .C .h .H
 
-.H.h: 
-	${M4} ${MACROS} $*.H > $*.h
+.H.h:
+	$(M4) $(M4FLAGS) ${MACROS} $*.H > $*.h
 
-.C.c: 
-	${M4} $(MACROS) $*.C > $*.c
+.C.c:
+	$(M4) $(M4FLAGS) $(MACROS) $*.C > $*.c
 
-.c.o: 
-	gcc -c $(CFLAGS) $*.c
+.c.o:
+	$(CC) -c $(CFLAGS) $*.c
 
-.C.o: 
-	${M4} $(MACROS) $*.C > $*.c
-	gcc -c $(CFLAGS) $*.c
+.C.o:
+	$(M4) $(M4FLAGS) $(MACROS) $*.C > $*.c
+	$(CC) -c $(CFLAGS) $*.c
 
 decs.h: decs.H
 jacobcalc.c: decs.h
@@ -52,4 +51,3 @@ slave2.c: decs.h
 laplacalc.c: decs.h
 multi.c: decs.h
 subblock.c: decs.h
-
