--- a/ext/splash2/kernels/cholesky/src/makefile
+++ b/ext/splash2/kernels/cholesky/src/makefile
@@ -1,11 +1,8 @@
 TARGET = cholesky
 OBJS = amal.o assign.o bfac.o bksolve.o block2.o fo.o mf.o numLL.o \
      parts.o seg.o solve.o tree.o util.o malloc.o 
-
-CFLAGS = -O2 -w 
-LDFLAGS = -lpthread -lm
+LDFLAGS += -lpthread -lm
 MACROS = ../../../null_macros/c.m4.null.pthread
-
 
 x = *
 
@@ -17,7 +14,7 @@ ifdef version
 endif
 
 $(TARGET): $(OBJS)
-	gcc $(OBJS) $(CFLAGS) -o $(TARGET) $(LDFLAGS)
+	$(CC) $(OBJS) $(CFLAGS) -o $(TARGET) $(LDFLAGS)
 
 install:
 	mkdir -p $(PREFIX)/bin
@@ -28,20 +25,20 @@ clean:
 	rm -rf *.c *.h *.o $(TARGET)
 
 .SUFFIXES:
-.SUFFIXES:	.o .c .C .h .H
+.SUFFIXES: .o .c .C .h .H
 
 .H.h:
-	m4 ${MACROS} $*.H > $*.h
+	$(M4) ${MACROS} $*.H > $*.h
 
 .C.c:
-	m4 $(MACROS) $*.C > $*.c
+	$(M4) $(MACROS) $*.C > $*.c
 
 .c.o:
-	gcc -c $(CFLAGS) $*.c
+	$(CC) -c $(CFLAGS) $*.c
 
 .C.o:
-	m4 $(MACROS) $*.C > $*.c
-	gcc -c $(CFLAGS) $*.c
+	$(M4) $(MACROS) $*.C > $*.c
+	$(CC) -c $(CFLAGS) $*.c
 
 matrix.h: matrix.H
 amal.c: matrix.h
@@ -58,4 +55,3 @@ seg.c: matrix.h
 bksolve.c: matrix.h
 mf.c: matrix.h
 solve.c: matrix.h
-
